--- a/package.json
+++ b/package.json
@@ -19,9 +19,13 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "babel-loader": "^7.1.2",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "body-parser": "^1.17.2",
     "express": "^4.15.4",
     "mongoose": "^4.11.7",
-    "react-router-dom": "^4.1.2"
+    "react-router-dom": "^4.1.2",
+    "webpack": "^3.8.1"
   }
 }
