update to axios

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "body-parser": "^1.17.2",
     "express": "^4.15.4",
     "mongoose": "^4.11.7",
+    "prop-types": "^15.6.0",
     "react-router-dom": "^4.1.2",
     "webpack": "^3.8.1"
   }
