--- a/package.json
+++ b/package.json
@@ -4,12 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "server": "node server.js",
-    "client": "node scripts/start-client.js",
-    "start": "concurrently \"nodemon server.js\" \"npm run client\"",
-    "build": "node scripts/build.js",
-    "seed": "node scripts/seedDB.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server/server.js",
+    "heroku-postbuild": "cd client && npm install --only=dev && npm install && npm run build"
   },
   "author": "",
   "license": "ISC",
@@ -28,5 +24,6 @@
     "prop-types": "^15.6.0",
     "react-router-dom": "^4.1.2",
     "webpack": "^3.8.1"
-  }
+  },
+  "proxy": "http://localhost:4000"
 }
